# PyDCAM

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: main.yaml
include/: camera.hpp  exceptions.hpp  wrap_enums.hpp
src/: camera.cpp
src/PyDCAM/: PyDCAM.cpp  __init__.py
